geosearch: fixing styling bug with distorted map controls

--- a/all/modules/custom/ndabio/css/ndabio_style.css
+++ b/all/modules/custom/ndabio/css/ndabio_style.css
@@ -2,6 +2,6 @@
  * Custom styles related to the Naturalis module
  */
 
-#map-canvas { height: 600px; }
-#areas { left: 75%; width: 24.5%; height: 100%; overflow: scroll; float: right; }
-#controls { position: absolute; bottom: 50px; left: 25px; float: left;}
+
+/*#areas { left: 75%; width: 24.5%; height: 100%; overflow: scroll; float: right; }*/
+/*#controls { position: absolute; bottom: 50px; left: 25px; float: left;}*/
