--- a/all/themes/custom/bioportal_theme/scss/bioportal_theme.scss
+++ b/all/themes/custom/bioportal_theme/scss/bioportal_theme.scss
@@ -394,8 +394,21 @@ $icon-chevron-right: "\e60c";
       padding-right: 1em;
     }
 
-  // -- geoserach: CHAINED-SELECT
+  // --geosearch: bug-fix (zurb vs. google maps)
 
+  #map-canvas{
+    img{
+      max-width: none;
+    }
+  }
+
+  // -- geosearch: LAYOUT
+    #map-canvas {
+        width: 640px;
+        height: 600px;
+      }
+
+  // -- geoserach: CHAINED-SELECT
     .chained-select{
       ul{
         list-style: none inside none;
@@ -459,11 +472,18 @@ $icon-chevron-right: "\e60c";
       }
     }
 
-    .row-area a{
-      color: $brown;
+    .row-area{
+      .item-list ul & {
+        line-height: 1.1;
+        margin-bottom: 10px;
+      }
 
-      &.active, &:hover{
-        color: $blue;
+      a{
+        color: $brown;
+
+        &.active, &:hover{
+          color: $blue;
+        }
       }
     }
 
